<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtResposta"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtNome"
        android:autofillHints="@string/labelNome"
        android:hint="@string/labelNome"
        android:textSize="25sp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelNome"
        android:hint="@string/labelNome"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtEndereco"
        android:autofillHints="@string/labelEndereco"
        android:hint="@string/labelEndereco"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtEndereco"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelEndereco"
        android:hint="@string/labelEndereco"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtBairro"
        android:autofillHints="@string/labelBairro"
        android:hint="@string/labelBairro"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelBairro"
        android:hint="@string/labelBairro"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtCep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtCep"
        android:autofillHints="@string/labelCep"
        android:hint="@string/labelCep"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtCep"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelCep"
        android:hint="@string/labelCep"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtObservacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtCep"
        android:autofillHints="@string/labelObservacoes"
        android:hint="@string/labelObservacoes"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtObservacoes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelObservacoes"
        android:hint="@string/labelObservacoes"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtDataCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txtDataCadastro"
        android:autofillHints="@string/labelDataCadastro"
        android:hint="@string/labelDataCadastro"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edtDataCadastro"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:autofillHints="@string/labelDataCadastro"
        android:hint="@string/labelDataCadastro"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnConfirmar"
        android:textSize="25sp"/>

</LinearLayout>